Bug 82160 - Start Center: Wrong mouse pointer is shown if document loading is aborted
Summary: Start Center: Wrong mouse pointer is shown if document loading is aborted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other All
: low minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: BSA target:5.2.0 target:5.1.4
Keywords:
: 93254 97903 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-04 23:35 UTC by Tredekka
Modified: 2016-10-25 19:02 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tredekka 2014-08-04 23:35:17 UTC
Problem description: 
LibreOffice "Start Center" Hangs when trying to open a deleted document from recent items without closing LibreOffice "Start Center"

Steps to reproduce:
0. Close all LibreOffice "Apps" & "Start Center"
1. Open Writer
2. Create Doc1
3. Save Doc1
4a. Close Doc1
4b. Note:  LibreOffice "Start Center" should "open" when you close the Doc1
5. SwitchTo/Open Windows Explorer
6. Delete Doc1
7. SwitchTo LibreOffice "Start Center"
8. Click on "Recent Item" Doc1
9. LibreOffice "Start Center" Hangs after "LibreOffice 4.3.0.4 | %Path%\Doc1.odt does not exist. <Click>[OK]" notification

Current behavior:
LibreOffice "Start Center" Hangs after "LibreOffice 4.3.0.4 | %Path%\Doc1.odt does not exist. <Click>[OK]" notification

Expected behavior:
Similar to how a Windows "Recent Items" list works, LibreOffice should prompt the user "Document not found.  Do you wish to remove this Document from the Recent Items list in the LibreOffice Suite. [Yes][No]"

Notes:  

>>>  This appears to be a different behavior, no "circus", just a hang (and it is reproducible on two different machines w same version) compared to Bug 57443 - Recent documents circus when the file is missing (edit); it also appears to be a different behavior from Bug 76510 && Bug 70225

>>>  If you close/reopen the LibreOffice "Start Center" the deleted Doc1 disappears from the Recent Items list preventing this error.  I think this is also a bad behavior (though not sure it deserves it's own bug?.?...) for whether it exists or not, I want to know my recently used items.
              
Operating System: Windows 7
Version: 4.3.0.4 release
Comment 1 retired 2014-08-05 09:25:28 UTC
On OSX 10.9.4 LO complains about a missing doc and shows the hourglass as mousepointer. While the latter is wrong and confusing, it does not hang LO. So maybe win only?
Comment 2 retired 2014-08-05 09:30:49 UTC
Same on Win 8.1 LO 4.3.0.4.

Error message and then LO simply shows the wrong mouse pointer but is still functional.

This is not a hang but bad UX and design. So what Tredekka suggest is perfectly legit. If LO cannot find a document, ask the user

"Do you wish to remove this Document from the Recent Items list in the LibreOffice Suite. [Yes][No]"

NEW.
Comment 3 tommy27 2015-11-01 20:10:15 UTC
*** Bug 93254 has been marked as a duplicate of this bug. ***
Comment 4 tommy27 2015-11-01 20:13:00 UTC
affects Linux as well as reported in duplicate Bug 93254
so every O/S is affected  
hardware -> ALL
Comment 5 Maxim Monastirsky 2016-02-17 13:40:35 UTC
*** Bug 97903 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2016-05-03 22:18:20 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4eba3762a01c1b686cf7de19b9391d56606e08d

tdf#82160 Reset mouse pointer if doc loading failed

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 tommy27 2016-05-04 04:48:40 UTC
thanks Maxim
you are doing a great job fixing many old annoting bugs like this one

thumbs up!!!