tdf#82160 Reset mouse pointer if doc loading failed

We call the dispatcher asynchronously, so have to pass
RecentDocsView ptr there too. (Note that it will change
its destruction time, from being made by VclBuilder to
the deletion of LoadRecentFile instance. dispose()
however is made earlier like before.)

Change-Id: Ib05226345c4b83d9190839de5cc04068ce1879d8