sfx2/source/control/recentdocsviewitem.cxx
@@ -221,8 +221,13 @@ void RecentDocsViewItem::OpenDocument()
         pLoadRecentFile->xDispatch = xDispatch;
         pLoadRecentFile->aTargetURL = aTargetURL;
         pLoadRecentFile->aArgSeq = aArgsList;
+        pLoadRecentFile->pView.set(&mrParent);
 
-        Application::PostUserEvent(LINK(nullptr, RecentDocsView, ExecuteHdl_Impl), pLoadRecentFile, true);
+        if (!Application::PostUserEvent(LINK(nullptr, RecentDocsView, ExecuteHdl_Impl), pLoadRecentFile, true))
+        {
+            delete pLoadRecentFile;
+            mrParent.SetPointer(Pointer(PointerStyle::Arrow));
+        }
     }
 }
 
